--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-pickle
+pickle==4.0
 numpy==1.20.2
 pandas==1.2.4
 Pillow==8.2.0
 scikit-learn==0.24.2
 scipy==1.6.3
-streamlit
+streamlit==1.10.0
+joblib==1.1.0
+pickleshare==0.7.5
+cloudpickle==2.1.0
